# CHIP-8

./: .gitattributes  .gitignore  CMakeLists.txt  EmuC8.sln  LICENSE  README.md
Core/: Core.vcxproj  Core.vcxproj.filters
Core/Include/cpu/: chip8.hpp
Core/Include/display/: display.hpp
Core/Source/: Main.cpp
Core/Source/cpu/: chip8.cpp
Core/Source/display/: display.cpp
roms/: HELLO.C8
source/: CMakeLists.txt  main.cpp
source/audio/: CMakeLists.txt  audio.cpp  audio.h  audio.hpp
source/cpu/: chip8.cpp  chip8.hpp
source/display/: display.cpp  display.hpp  glad.c
source/emu/: CMakeLists.txt
source/emu/private/: emulator.cpp
source/emu/private/audio/: audio.cpp  audio.hpp
source/emu/private/cpu/: cpu.cpp  cpu.hpp
source/emu/private/display/: display.cpp  display.hpp  glad.c  glad.h
source/emu/public/: emulator.hpp
source/gui/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  testwindow.cpp  testwindow.h  testwindow.ui
